# progetto_universit-

proj-codd/: Dockerfile  README.md  pyproject.toml
proj-codd/.github/workflows/: CI-CD.yml  CI.yml
proj-codd/docs/: CODE_OF_CONDUCT.md  Guida configurazione repo.md  ISPIRATORE.md  Report.md
proj-codd/src/: __init__.py  board.py  history.py  movement.py  replay.py  timer.py  view.py  wall.py  win_handler.py
proj-codd/src/gui/: __init__.py  app.py  board_widget.py  main.py  overlays.py  player_card.py  setup_screen.py  styles.tcss
proj-codd/tests/: test_board.py  test_history.py  test_integration.py  test_main.py  test_movement.py  test_replay.py  test_timer.py  test_wall.py  test_win_handler.py
proj-codd/tests/tests_GUI/: test_board_widget.py  test_overlays.py  test_player_card.py  test_setup_screen.py  test_stopwatch.py
