[project]
name = "app"
version = "0.1.0"
description = "Implementazione del gioco a linea di comando"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "rich>=13.9.4",
    "textual",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = ["D203", "D213", "D100", "D102", "D107"]
